--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "demo",
+  "name": "cryptofintechx-dashboard",
   "version": "0.1.0",
-  "homepage": "https://bootstrapdash.com/demo/azia-react-pro/template/demo_6/preview",
+  "homepage": "https://dashboard.cryptofintechx.com/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
@@ -32,7 +32,7 @@
     "react-perfect-scrollbar": "^1.5.3",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.1",
     "react-select": "^3.0.8",
     "react-simplemde-editor": "^4.1.0",
     "typicons.font": "^2.0.9"
