--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/react": "^4.3.0",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@tinymce/tinymce-react": "^3.5.0",
+    "axios": "^0.25.0",
     "bootstrap": "^4.4.1",
     "bs-custom-file-input": "^1.3.4",
     "chart.js": "^2.9.3",
@@ -20,7 +21,7 @@
     "nouislider-react": "^3.3.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-bootstrap-table-next": "^3.3.5",
+    "react-bootstrap-table-next": "^1.1.0",
     "react-bootstrap-table2-paginator": "^2.1.0",
     "react-bootstrap-table2-toolkit": "^2.1.2",
     "react-chartjs-2": "^2.9.0",
@@ -30,9 +31,9 @@
     "react-input-mask": "^2.0.4",
     "react-multistep": "^3.7.3",
     "react-perfect-scrollbar": "^1.5.3",
-    "react-quill": "^1.3.3",
+    "react-quill": "^0.0.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.0",
     "react-select": "^3.0.8",
     "react-simplemde-editor": "^4.1.0",
     "typicons.font": "^2.0.9"
@@ -60,6 +61,6 @@
   },
   "devDependencies": {
     "compass-mixins": "^0.12.10",
-    "node-sass": "^4.13.0"
+    "node-sass": "^7.0.1"
   }
 }
