--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.4.1",
     "bs-custom-file-input": "^1.3.4",
     "chart.js": "^2.9.3",
+    "country-list-js": "^3.1.7",
     "flag-icon-css": "^3.4.5",
     "ionicons": "^4.6.3",
     "nouislider-react": "^3.3.7",
