--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.12.0",
     "react-input-mask": "^2.0.4",
     "react-multistep": "^3.7.3",
+    "react-password-strength-bar": "^0.4.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-quill": "^0.0.2",
     "react-router-dom": "^5.1.2",
