--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "react-password-strength-bar": "^0.4.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-quill": "^0.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.0",
     "react-select": "^3.0.8",
     "react-simplemde-editor": "^4.1.0",
+    "redux": "^4.1.2",
     "typicons.font": "^2.0.9"
   },
   "scripts": {
