--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "country-list-js": "^3.1.7",
     "flag-icon-css": "^3.4.5",
     "ionicons": "^4.6.3",
+    "is-empty": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "nouislider-react": "^3.3.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -40,6 +42,7 @@
     "react-select": "^3.0.8",
     "react-simplemde-editor": "^4.1.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "typicons.font": "^2.0.9"
   },
   "scripts": {
