Polished redux store and added alerts

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/react": "^4.3.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -20,6 +21,7 @@
     "flag-icon-css": "^3.4.5",
     "ionicons": "^4.6.3",
     "is-empty": "^1.2.0",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "nouislider-react": "^3.3.7",
     "react": "^16.12.0",
@@ -42,6 +44,9 @@
     "react-select": "^3.0.8",
     "react-simplemde-editor": "^4.1.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-persist-indexeddb-storage": "^1.0.4",
     "redux-thunk": "^2.4.1",
     "typicons.font": "^2.0.9"
   },
